--- a/style.css
+++ b/style.css
@@ -1,1 +1,102 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap");
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  height: 100vh;
+  background-image: linear-gradient(to right top, #98dadf, #43dfea);
+  font-family: "Roboto", sans-serif;
+}
+
+.outer {
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.circle {
+  height: 250px;
+  width: 250px;
+  border-radius: 50%;
+  background-image: linear-gradient(to right top, #ffffff00, #ffffff);
+  position: absolute;
+  z-index: -1;
+}
+
+.circle-1 {
+  top: 80px;
+  left: 420px;
+}
+
+.circle-2 {
+  bottom: 80px;
+  right: 420px;
+}
+
+.container {
+  background-color: #ffffff2d;
+  padding: 20px 40px;
+  border-radius: 8px;
+  box-shadow: 2px 2px 6px 0px #00000075;
+}
+
+.form {
+  width: 300px;
+}
+
+header {
+  margin-bottom: 20px;
+}
+
+h1 {
+  margin-bottom: 5px;
+}
+
+p {
+  color: #5b5b5b;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+}
+
+label {
+  font-weight: 500;
+  margin-bottom: 6px;
+}
+
+input {
+  margin-bottom: 15px;
+  padding: 10px 8px;
+  border-radius: 4px;
+  border: solid 1px #797979;
+}
+
+button {
+  padding: 8px 0;
+  background-color: #2b7dbe;
+  border: none;
+  color: #ffffff;
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  font-size: 20px;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+footer {
+  margin-top: 20px;
+  text-align: center;
+}
+
+a {
+  color: #2b7dbe;
+  font-weight: 500;
+}
