--- a/style.css
+++ b/style.css
@@ -40,10 +40,11 @@ body {
 }
 
 .container {
-  background-color: #ffffff2d;
+  background-color: #ffffff4a;
   padding: 20px 40px;
   border-radius: 8px;
-  box-shadow: 2px 2px 6px 0px #00000075;
+  box-shadow: 2px 2px 6px 0px #26496682;
+  backdrop-filter: blur(8px);
 }
 
 .form {
